<resources>
    <string name="app_name">TourismApp</string>

    <!-- Strings related to login -->
    <string name="prompt_email">E-mail</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Iniciar sesión</string>
    <string name="action_reg">Registrarse</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>

    <string name="error_incorrect_rut">This password is incorrect</string>
    <string name="error_incorrect">This field is incorrect</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- API KEY -->
    <string name="google_maps_key"> AIzaSyBUmLW481yj2a3U3CAiSK1P4CjRDy09wIo</string>


    <!-- String to AndroidManifiest.xml-->
    <string name="compartir">Compartir</string>
    <string name="perfil">Perfil de Usuario</string>
    <string name="addPlace">Compartir lugares</string>


    <!-- Strings to activity_perfil.xml-->
    <string name="img_default">img_default</string>
    <string name="name_user">Nicolas</string>
    <string name="surname">Ojeda</string>
    <string name="s_surname">Recabarren</string>
    <string name="mail_perfil">12343</string>
    <string name="nameuser_perfil">Nicokawai666</string>
    <string name="password_perfil">*****</string>
    <string name="btnPass">Cambiar Password</string>
    <string name="btnGuardar">Guardar</string>

    <!-- String to ActivityPerfil.java-->


    <!-- Strings activity:share_place.xml -->
    <string name="share_places">Comparte lo que quieras!</string>
    <string name="name_shareplace">Nombre :</string>
    <string name="nameplace">La picada de toesca</string>
    <string name="location">Toesca #1234</string>
    <string name="schedule_word">Horario:</string>
    <string name="SelectTagWord">Seleccione Tags</string>
    <string name="shareplace">Compatir!</string>
    <string name="title_activity_maps">Map</string>

    <!-- String nav_header_main.xml -->
    <string name="NameTour">TourismAPP</string>
    <string name="mailsupport">Tourismapp@tour.com</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">TourismApp</string>
    <!-- String activity_main_drawer-->
    <string name="prefBus">Preferencias de Búsqueda</string>
    <string name="Favoritos">Favoritos</string>
    <string name="Mcoment">Mis comentarios</string>
    <string name="ConfCuent">Configuración de Cuenta</string>
    <string name="support">Suppot</string>
    <string name="Logout">Cerrar Sesión</string>


    <!-- String to activity_add_place.xml -->

    <string name="description_place">Descripción</string>
    <string name="Schedule_place">Horario</string>
    <string name="Week">Lunes a Viernes:</string>
    <string name="Weekend">Fin de semana y Festivos:</string>
    <string name="WeekSC">Lunes a Viernes</string>
    <string name="open">Apertura</string>
    <string name="close">Cierre</string>
    <string name="WeekndSC">Fin de semana y Festivos</string>
    <string name="phone">Telefóno(Opcional)</string>
    <string name="tags">Seleccionar Tags</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <!-- Register activity -->
    <string name="register">Registro</string>
    <string name="reg_name">Nombre</string>
    <string name="reg_sur">Primer apellido</string>
    <string name="reg_s_sur">Segundo apellido</string>
    <string name="reg_rut">Rut</string>
    <string name="reg_email">Email</string>
    <string name="reg_phone">Telefono</string>
    <string name="reg_pass">Contraseña</string>
    <string name="reg_save">Registrarme</string>

    <!-- Main Activity -->
    <string name="preferences">Preferencias de búsqueda</string>
    <!--<string name="history"></string>-->
    <string name="favorites">Favoritos</string>
    <string name="comentaries">Mis comentarios</string>
    <string name="settings">Configuración de cuenta</string>
    <string name="suppport">Soporte</string>
    <string name="out_session">Cerrar sesión</string>

    <string name="Openhour">00</string>
    <string name="action_settings">Configuraciones</string>
    <string name="exit">Cerrar sesión</string>
    <string name="circle_color">#0D47A1</string>


    <!-- Fragment Evaluation -->
    <string name="scoreWord">Score</string>
    <string name="scoreWordUser">Score Usuario</string>
    <string name="ComentarioWordUser">Ingresa tú comentario</string>
    <string name="EvaluarWord">Evaluar</string>
    <string name="ComentariosWordUsers">Otros comentarios</string>


    <!-- Fragment Share Place -->
    <string name="sharePreferences">Ajustes de búsqueda</string>
    <string name="ratioSelect">Elegir Distancia</string>
    <string name="ratioWord">Radio</string>
    <string name="share">Buscar</string>

    <string name="aux1">HOLA</string>
    <string name="aux2">Chao</string>

</resources>
