<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/preferences_main"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/preferences" />
        <!--
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Slideshow" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="Tools" />

        <item
            android:id="@+id/favorites_main"
            android:title="@string/favorites" />
        -->
        <item
            android:icon="@drawable/ic_menu_send"
            android:id="@+id/comentaries_main"
            android:title="@string/comentaries" />
        <item
            android:icon="@drawable/ic_menu_manage"
            android:id="@+id/settings_main"
            android:title="@string/settings" />
        <item
            android:icon="@drawable/ic_menu_share"
            android:id="@+id/support_main"
            android:title="@string/suppport" />

        <item
            android:icon="@android:drawable/ic_lock_power_off"
            android:id="@+id/exit_sesion"
            android:title="@string/exit" />
    </group>
    <!--
    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>
    -->
</menu>
