<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_aux"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.fabulias.tourismapp.SharePreferenceActivity">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sharePreferences"
        android:layout_gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:textSize="25sp"
        android:textColor="@color/colorPrimaryDark"
        android:typeface="serif"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="1sp"
        android:background="@color/black"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/ratioSelect"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginTop="60dp"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="10dp"
        android:layout_alignParentLeft="@+id/ratio"
        android:text="@string/ratioWord"
        android:textColor="@color/black"
        android:textSize="18sp"/>
    <SeekBar
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginRight="60dp"
        android:layout_marginLeft="60dp"
        android:max="25"
        android:id="@+id/ratio"/>
    <TextView
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginRight="10dp"

        android:id="@+id/distance"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_alignTop="@+id/ratio"
        android:layout_alignParentEnd="true" />


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="1sp"
        android:background="@color/black"
        android:layout_marginTop="150dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="170dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/SelectTagWord"
        android:textSize="20sp"
        android:textColor="@color/black"
        />
    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:background="@color/primaryColor"
        android:text="@string/tags"
        android:id="@+id/selectTags"
        android:onClick="onButtonClickedSelectedTags"
        />
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="1sp"
        android:background="@color/black"
        android:layout_marginTop="270dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        />
    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="290dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/share"
        android:id="@+id/share_preference"
        android:textColor="@color/black"

        />


</RelativeLayout>
