<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fabulias.tourismapp.EvaluationFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="268dp"
        android:layout_height="wrap_content"
        android:id="@id/namePlace"
        android:text="@string/nameplace"
        android:textColor="#ce3232"
        android:textSize="25sp"
        android:typeface="serif"
        android:layout_gravity="center_horizontal"
        />
    <TextView
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:id="@+id/scoreWord"
        android:text="@string/scoreWord"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:typeface="serif"
        android:layout_marginTop="65dp"
        android:layout_marginStart="40dp"
        />
    <RatingBar
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:layout_gravity="center_horizontal"
        android:numStars="5"
        android:rating="2.0"
        />


    <ScrollView
        android:layout_width="360dp"
        android:layout_height="match_parent"
        android:layout_marginTop="120dp"
        android:layout_marginStart="15dp"
        android:id="@+id/scrollEvaluation"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:orientation="vertical">
            <ImageView
                android:layout_width="344dp"
                android:layout_height="wrap_content"
                android:id="@+id/photoperfil"
                android:src="@mipmap/img_default"
                android:layout_gravity="center_horizontal"
                android:contentDescription="Foto place"
                />
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="1sp"
                android:background="@color/black"
                android:layout_marginStart="10dp"
                android:layout_marginTop="19dp"
                />
            <TextView
                android:layout_width="161dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="10dp"
                android:id="@+id/scoreWord"
                android:text="@string/scoreWordUser"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:typeface="serif"
                />
            <RatingBar
                android:layout_width="207dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:numStars="5"
                android:rating="0.0"
                />
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="1sp"
                android:background="@color/black"
                android:layout_marginStart="10dp"
                android:layout_marginTop="19dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="10dp"
                android:id="@+id/comentarioWord"
                android:text="@string/ComentarioWordUser"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:typeface="serif"
                />
            <EditText
                android:id="@+id/comentario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:inputType="textMultiLine">

                <requestFocus />

            </EditText>
            <Button
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@color/primaryColor"
                android:text="@string/EvaluarWord"
                android:id="@+id/Evaluation"
                />
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="1sp"
                android:background="@color/black"
                android:layout_marginStart="10dp"
                android:layout_marginTop="19dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="10dp"
                android:id="@+id/comentariosUsers"
                android:text="@string/ComentariosWordUsers"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:typeface="serif"
                />







        </LinearLayout>





    </ScrollView>




</FrameLayout>
